# serverless-multitenant-ingest

./: .env.example  .gitignore  README.md
docs/: architecture.md
ingest_job/: Dockerfile  README.md  pyproject.toml
ingest_job/src/: main.py  pipeline_sources.py  secrets_resolver.py
ingest_job/src/sources/: __init__.py
ingest_job/src/sources/salesforce/: __init__.py  settings.py
ingest_job/src/sources/salesforce/helpers/: client.py  records.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/configs/tenants/example/: hubspot.yaml  salesforce.yaml
